# tuningfork

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: essay.md  framework.md
examples/: agent_demo.py  demo.py
src/tuningfork/: __init__.py  agent.py  harness.py  ledger.py  mcp_client.py  tiering.py  validators.py
tests/: test_agent.py  test_smoke.py
tests/fixtures/: fake_mcp_server.py
